--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
+    "start": "tsc && node --experimental-modules src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/giuseppecutuli/hashcode-2020/issues"
   },
-  "homepage": "https://github.com/giuseppecutuli/hashcode-2020#readme"
+  "type": "module",
+  "homepage": "https://github.com/giuseppecutuli/hashcode-2020#readme",
+  "devDependencies": {
+    "@types/node": "^13.7.4",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
+  }
 }
